--- a/BlazorClaimsRolesPolicy/Pages/AdminPage.razor
+++ b/BlazorClaimsRolesPolicy/Pages/AdminPage.razor
@@ -21,8 +21,9 @@
         <div class="col-sm-10">
             <InputText id="login" @bind-Value="newUser.LoginName" class="form-control"></InputText>
         </div>
+        <label for="login" class="col-sm-2 col-form-label">Assign Role</label>
         <div class="col-sm-10">
-            <InputSelect id="role-select" @bind-Value="newUser.UserRole">
+            <InputSelect id="role-select" @bind-Value="newUser.UserRole" class="form-control">
                 @foreach (var role in selectList)
                 {
                     <option value="@role.Value" selected="@role.Selected">@role.Text</option>
@@ -30,6 +31,8 @@
             </InputSelect>
         </div>
     </div>
+
+    <button type="submit" class="btn btn-primary">Submit</button>
 </EditForm>
 
 @code {
@@ -74,6 +77,6 @@
 
     public async Task AddUserWithRole(EditContext context)
     {
-
+        var usermodel = context.Model as User;
     }
 }
